--- a/sqlboiler.toml
+++ b/sqlboiler.toml
@@ -3,7 +3,7 @@ wipe     = true
 templates = [
   "/go/pkg/mod/github.com/volatiletech/sqlboiler/v4@v4.14.0/templates/main", # sqlboilerのテンプレートディレクトリ
   "/go/pkg/mod/github.com/volatiletech/sqlboiler/v4@v4.14.0/templates/test", # sqlboilerのテスト用テンプレートディレクトリ
-  # "templates" # カスタムテンプレートディレクトリ
+  "templates" # カスタムテンプレートディレクトリ
 ]
 
 [psql]
